# AiraMusic

./: .env  .env.development  .env.production  .gitattributes  .gitignore  .oxlintrc.json  .prettierignore  LEGACY_ELECTRON_PROXY.md  README.md  TODO  api.md  electron-builder.json  eslint.config.ts  note.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.js  tsconfig.json  vitest.config.ts
api/: package.json
app/: .env  package.json  tsconfig.json  tsup.config.cts
cache/: index.ts  main.go  package.json
design/: index.html  package.json
dist-app/: main.mjs  main.mjs.map
err/: package.json
fileServer/: go.mod  main.go
model/: banner.json  commentsNewSong.json  dailyRecommendPlaylist.json  dailyRecommendTracks.json  getMP3.json  getUGCAlbum.json  getUGCSong.json  highQualityPlaylist.json  lyricNew.json  playListDetail.json  playListDetailNotSelf.json  playlistCatlist.json  recommendPlaylist.json  searchAlbum.json  searchAll.json  searchArtist.json  searchPlaylist.json  searchSong.json  searchSuggest.json  topPlaylist.json  topSong.json  ttml_metadata.json  userLikedTrackIDs.json  yrcLyric.json
native/: Cargo.toml  index.js  native.win32-x64-msvc.node  package.json
native/src/: lib.rs  utils.rs
native/src/taskbar/: button.rs  icon.rs  manager.rs  mod.rs  thumbnail.rs  wndproc.rs
native/types/: index.d.ts
scripts/: electron.ps1  electron.sh  env.ts  font.ts  git-commit.ps1  git-commit.sh  logo.ts
store/: .gitignore  go.mod  index.ts  main.go  package.json
tests/: setup.ts
types/: env.d.ts  event.d.ts  global.d.ts  info.d.ts  lyric.d.ts  modules.d.ts  player.d.ts  utils.d.ts  window.d.ts
ui/: image.html  index.html  info.html  login.html  lyric.html  mini.html  package.json  (+3 more)
wasm/: Cargo.toml  package.json
wasm/src/: lib.rs
wasm/src/kmeans/: fit.rs  img.rs  mod.rs  opt.rs
wasm/src/lyric/: mod.rs  model.rs  parse.rs  utils.rs
wasm/src/modules/: kmeans.rs
wasm/src/path/: mod.rs
wasm/src/range/: mod.rs  range.rs
wasm/src/renderer/: README.md  mod.rs  webgl.rs
wasm/src/search/: mod.rs  model.rs  test.rs  track.rs
wasm/src/spectrum/: analyzer.rs  fft.rs  mod.rs  processor.rs  smoothing.rs  window.rs
wasm/src/theme/: image.rs  mod.rs  model.rs
(+960 files in other folders)
